@@ -18,24 +18,68 @@ rem   limitations under the License.
 rem   =====================================================
 rem   Environment variables that can be defined externally:
 rem
-rem   JMETER_BIN - JMeter bin directory (must end in \)
-rem   JM_LAUNCH - java.exe (default) or javaw.exe
-rem   JVM_ARGS - additional java options, e.g. -Dprop=val
-rem   JM_START - set this to "start" to launch JMeter in a separate window
-rem              this is used by the jmeterw.cmd script.
+rem   Do not set the variables in this script. Instead put them into a script
+rem   setenv.bat in JMETER_HOME/bin to keep your customizations separate.
+rem
+rem   DDRAW       - (Optional) JVM options to influence usage of direct draw,
+rem                 e.g. '-Dsun.java2d.ddscale=true'
+rem
+rem   JMETER_BIN  - JMeter bin directory (must end in \)
+rem
+rem   JMETER_COMPLETE_ARGS - if set indicates that JVM_ARGS is to be used exclusively instead
+rem                 of adding other options like HEAP or GC_ALGO
+rem
+rem   JMETER_HOME - installation directory. Will be guessed from location of jmeter.bat
+rem
+rem   JM_LAUNCH   - java.exe (default) or javaw.exe
+rem
+rem   JM_START    - set this to "start" to launch JMeter in a separate window
+rem                 this is used by the jmeterw.cmd script.
+rem
+rem   JVM_ARGS    - (Optional) Java options used when starting JMeter, e.g. -Dprop=val
+rem                 Defaults to '-Duser.language="en" -Duser.region="EN"'
+rem
+rem   GC_ALGO     - (Optional) JVM garbage collector options 
+rem                 Defaults to '-XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:G1ReservePercent=20'
+rem
+rem   HEAP        - (Optional) JVM memory settings used when starting JMeter
+rem                 Defaults to '-Xms1g -Xmx1g -XX:MaxMetaspaceSize=256m'
 rem
 rem   =====================================================
 
 setlocal
-# Set language
-# Default to en_EN
-set JVM_ARGS=-Duser.language="en" -Duser.region="EN"
+
+rem Guess JMETER_HOME if not defined
+set "CURRENT_DIR=%cd%"
+if not "%JMETER_HOME%" == "" goto gotHome
+set "JMETER_HOME=%CURRENT_DIR%"
+if exist "%JMETER_HOME%\bin\jmeter.bat" goto okHome
+cd ..
+set "JMETER_HOME=%cd%"
+cd "%CURRENT_DIR%"
+:gotHome
+
+if exist "%JMETER_HOME%\bin\jmeter.bat" goto okHome
+echo The JMETER_HOME environment variable is not defined correctly
+echo This environment variable is needed to run this program
+goto end
+:okHome
+
+rem Get standard environment variables
+if exist "%JMETER_HOME%\bin\setenv.bat" call "%JMETER_HOME%\bin\setenv.bat"
+
+if not defined JMETER_LANGUAGE (
+    rem Set language
+    rem Default to en_EN
+    set JMETER_LANGUAGE=-Duser.language="en" -Duser.region="EN"
+)
+
 rem Minimal version to run JMeter
 set MINIMAL_VERSION=1.8.0
 
 
 rem --add-modules java.activation if JAVA 9
-set ADD_MODS=
+set JAVA9_OPTS=
 
 
 for /f "tokens=3" %%g in ('java -version 2^>^&1 ^| findstr /i "version"') do (
@@ -51,7 +95,10 @@ if not defined JAVAVER (
 
 
 rem Check if version is from OpenJDK or Oracle Hotspot JVM prior to 9 containing 1.${version}.x
-IF "%variable:~0,2%"=="1." (
+rem JAVAVER will be equal to "9.0.4" (quotes are part of the value) for Oracle Java 9
+rem JAVAVER will be equal to "1.8.0_161" (quotes are part of the value) for Oracle Java 8
+rem so we extract 2 chars starting from index 1
+IF "%JAVAVER:~1,2%"=="1." (
     set JAVAVER=%JAVAVER:"=%
     for /f "delims=. tokens=1-3" %%v in ("%JAVAVER%") do (
         set current_minor=%%w
@@ -59,7 +106,7 @@ IF "%variable:~0,2%"=="1." (
 ) else (
     rem Java 9 at least
     set current_minor=9
-    set ADD_MODS=--add-modules java.activation
+    set JAVA9_OPTS=--add-modules java.activation --add-opens java.desktop/sun.awt=ALL-UNNAMED --add-opens java.desktop/sun.swing=ALL-UNNAMED --add-opens java.desktop/javax.swing.text.html=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED
 )
 
 
@@ -79,10 +126,14 @@ if %current_minor% LSS %minimal_minor% (
     goto pause
 )
 
-if .%JM_LAUNCH% == . set JM_LAUNCH=java.exe
+if not defined JM_LAUNCH (
+    set JM_LAUNCH=java.exe
+)
 
 if exist jmeter.bat goto winNT1
-if .%JMETER_BIN% == . set JMETER_BIN=%~dp0
+if not defined JMETER_BIN (
+    set JMETER_BIN=%~dp0
+)
 
 :winNT1
 rem On NT/2K grab all arguments at once
@@ -91,17 +142,22 @@ set JMETER_CMD_LINE_ARGS=%*
 rem The following link describes the -XX options:
 rem http://docs.oracle.com/javase/8/docs/technotes/tools/unix/java.html
 
-rem See the unix startup file for the rationale of the following parameters,
-rem including some tuning recommendations
-set HEAP=-Xms512m -Xmx512m -XX:MaxMetaspaceSize=256m
+if not defined HEAP (
+    rem See the unix startup file for the rationale of the following parameters,
+    rem including some tuning recommendations
+    set HEAP=-Xms1g -Xmx1g -XX:MaxMetaspaceSize=256m
+)
 
 rem Uncomment this to generate GC verbose file with Java prior to 9 
 rem set VERBOSE_GC=-verbose:gc -Xloggc:gc_jmeter_%%p.log -XX:+PrintGCDetails -XX:+PrintGCCause -XX:+PrintTenuringDistribution -XX:+PrintHeapAtGC -XX:+PrintGCApplicationConcurrentTime -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCDateStamps -XX:+PrintAdaptiveSizePolicy
 
 rem Uncomment this to generate GC verbose file with Java 9 and above
 rem set VERBOSE_GC=-Xlog:gc*,gc+age=trace,gc+heap=debug:file=gc_jmeter_%%p.log
-
-set GC_ALGO=-XX:+UseG1GC -XX:MaxGCPauseMillis=250 -XX:G1ReservePercent=20
+rem You may want to add those settings
+rem -XX:+ParallelRefProcEnabled -XX:+PerfDisableSharedMem
+if not defined GC_ALGO (
+    set GC_ALGO=-XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:G1ReservePercent=20
+)
 
 set SYSTEM_PROPS=-Djava.security.egd=file:/dev/urandom
 
@@ -115,23 +171,26 @@ rem set RUN_IN_DOCKER=-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimit
 rem Additional settings that might help improve GUI performance on some platforms
 rem See: http://www.oracle.com/technetwork/java/perf-graphics-135933.html
 
-set DDRAW=
-rem  Setting this flag to true turns off DirectDraw usage, which sometimes helps to get rid of a lot of rendering problems on Win32.
-rem set DDRAW=%DDRAW% -Dsun.java2d.noddraw=true
+if not defined DDRAW (
+    set DDRAW=
+    rem  Setting this flag to true turns off DirectDraw usage, which sometimes helps to get rid of a lot of rendering problems on Win32.
+    rem set DDRAW=%DDRAW% -Dsun.java2d.noddraw=true
 
-rem  Setting this flag to false turns off DirectDraw offscreen surfaces acceleration by forcing all createVolatileImage calls to become createImage calls, and disables hidden acceleration performed on surfaces created with createImage .
-rem set DDRAW=%DDRAW% -Dsun.java2d.ddoffscreen=false
+    rem  Setting this flag to false turns off DirectDraw offscreen surfaces acceleration by forcing all createVolatileImage calls to become createImage calls, and disables hidden acceleration performed on surfaces created with createImage .
+    rem set DDRAW=%DDRAW% -Dsun.java2d.ddoffscreen=false
 
-rem Setting this flag to true enables hardware-accelerated scaling.
-rem set DDRAW=%DDRAW% -Dsun.java2d.ddscale=true
-
-rem Server mode
-set SERVER=-server
+    rem Setting this flag to true enables hardware-accelerated scaling.
+    rem set DDRAW=%DDRAW% -Dsun.java2d.ddscale=true
+)
 
 rem Collect the settings defined above
-set ARGS=%SERVER% %DUMP% %HEAP% %VERBOSE_GC% %GC_ALGO% %DDRAW% %SYSTEM_PROPS% %RUN_IN_DOCKER%
+if not defined JMETER_COMPLETE_ARGS (
+    set ARGS=%JAVA9_OPTS% %DUMP% %HEAP% %VERBOSE_GC% %GC_ALGO% %DDRAW% %SYSTEM_PROPS% %JMETER_LANGUAGE% %RUN_IN_DOCKER%
+) else (
+    set ARGS=
+)
 
-%JM_START% %JM_LAUNCH% %ARGS% %JVM_ARGS% -jar "%JMETER_BIN%ApacheJMeter.jar" %JMETER_CMD_LINE_ARGS%
+%JM_START% "%JM_LAUNCH%" %ARGS% %JVM_ARGS% -jar "%JMETER_BIN%ApacheJMeter.jar" %JMETER_CMD_LINE_ARGS%
 
 rem If the errorlevel is not zero, then display it and pause
 
